tests/failing/outputs/z_compile.exp
generated/Main.java:22: error: cannot find symbol
            c = (c+b(i));
                   ^
  symbol:   method b(Integer)
  location: class Main
1 error
